src/main/scala/io/github/edadma/iup/extern/LibIUP.scala

  def IupGetIntId2(ih: Ptr[Ihandle], name: /*const*/ CString, lin: CInt, col: CInt): CInt          = extern //149
  def IupGetFloatId2(ih: Ptr[Ihandle], name: /*const*/ CString, lin: CInt, col: CInt): CFloat      = extern //150
  def IupGetDoubleId2(ih: Ptr[Ihandle], name: /*const*/ CString, lin: CInt, col: CInt): CDouble    = extern //151
  def IupGetRGBId2(ih: Ptr[Ihandle],
                   name: /*const*/ CString,
                   lin: CInt,
                   col: CInt,
                   r: Ptr[CUnsignedChar],
                   g: Ptr[CUnsignedChar],
                   b: Ptr[CUnsignedChar]): Unit                                             = extern //152
  def IupSetGlobal(name: /*const*/ CString, value: /*const*/ CString): Unit                 = extern //154
  def IupSetStrGlobal(name: /*const*/ CString, value: /*const*/ CString): Unit              = extern //155
  def IupGetGlobal(name: /*const*/ CString): CString                                        = extern //156
  def IupSetFocus(ih: Ptr[Ihandle]): Ptr[Ihandle]                                           = extern //158
  def IupGetFocus: Ptr[Ihandle]                                                             = extern //159
  def IupPreviousField(ih: Ptr[Ihandle]): Ptr[Ihandle]                                      = extern //160
  def IupNextField(ih: Ptr[Ihandle]): Ptr[Ihandle]                                          = extern //161
  def IupGetCallback(ih: Ptr[Ihandle], name: /*const*/ CString): Icallback                  = extern //163
  def IupSetCallback(ih: Ptr[Ihandle], name: /*const*/ CString, func: Icallback): Icallback = extern //164
  // def IupSetCallbacks(ih: Ptr[Ihandle], name: /*const*/ CString, func: Icallback): Ptr[Ihandle] = extern //165
  def IupGetFunction(name: /*const*/ CString): Icallback                                                         = extern //167
  def IupSetFunction(name: /*const*/ CString, func: Icallback): Icallback                                        = extern //168
  def IupGetHandle(name: /*const*/ CString): Ptr[Ihandle]                                                        = extern //170
  def IupSetHandle(name: /*const*/ CString, ih: Ptr[Ihandle]): Ptr[Ihandle]                                      = extern //171
  def IupGetAllNames(names: Ptr[CString], n: CInt): CInt                                                         = extern //172
  def IupGetAllDialogs(names: Ptr[CString], n: CInt): CInt                                                       = extern //173
  def IupGetName(ih: Ptr[Ihandle]): CString                                                                      = extern //174
  def IupSetAttributeHandle(ih: Ptr[Ihandle], name: /*const*/ CString, ih_named: Ptr[Ihandle]): Unit             = extern //176
  def IupGetAttributeHandle(ih: Ptr[Ihandle], name: /*const*/ CString): Ptr[Ihandle]                             = extern //177
  def IupSetAttributeHandleId(ih: Ptr[Ihandle], name: /*const*/ CString, id: CInt, ih_named: Ptr[Ihandle]): Unit = extern //178
  def IupGetAttributeHandleId(ih: Ptr[Ihandle], name: /*const*/ CString, id: CInt): Ptr[Ihandle]                 = extern //179
  def IupSetAttributeHandleId2(ih: Ptr[Ihandle], name: /*const*/ CString, lin: CInt, col: CInt, ih_named: Ptr[Ihandle]): Unit =
    extern //180
  def IupGetAttributeHandleId2(ih: Ptr[Ihandle], name: /*const*/ CString, lin: CInt, col: CInt): Ptr[Ihandle] = extern //181
  def IupGetClassName(ih: Ptr[Ihandle]): CString                                                              = extern //183
  def IupGetClassType(ih: Ptr[Ihandle]): CString                                                              = extern //184
  def IupGetAllClasses(names: Ptr[CString], n: CInt): CInt                                                    = extern //185
  def IupGetClassAttributes(classname: /*const*/ CString, names: Ptr[CString], n: CInt): CInt                 = extern //186
  def IupGetClassCallbacks(classname: /*const*/ CString, names: Ptr[CString], n: CInt): CInt                  = extern //187
  def IupSaveClassAttributes(ih: Ptr[Ihandle]): Unit                                                          = extern //188
  def IupCopyClassAttributes(src_ih: Ptr[Ihandle], dst_ih: Ptr[Ihandle]): Unit                                = extern //189
  def IupSetClassDefaultAttribute(classname: /*const*/ CString, name: /*const*/ CString, value: /*const*/ CString): Unit =
    extern //190
  def IupClassMatch(ih: Ptr[Ihandle], classname: /*const*/ CString): CInt            = extern //191
  def IupCreate(classname: /*const*/ CString): Ptr[Ihandle]                          = extern //193
  def IupCreatev(classname: /*const*/ CString, params: Ptr[Ptr[Unit]]): Ptr[Ihandle] = extern //194
  // def IupCreatep(classname: /*const*/ CString, first: Ptr[Unit]): Ptr[Ihandle] = extern //195

  /************************************************************************/
  /*                        Elements                                      */
  /************************************************************************/
  def IupFill: Ptr[Ihandle]                       = extern //201
  def IupSpace: Ptr[Ihandle]                      = extern //202
  def IupRadio(child: Ptr[Ihandle]): Ptr[Ihandle] = extern //204
  // def IupVbox(child: Ptr[Ihandle]): Ptr[Ihandle] = extern //205
  def IupVboxv(children: Ptr[Ptr[Ihandle]]): Ptr[Ihandle] = extern //206
  // def IupZbox(child: Ptr[Ihandle]): Ptr[Ihandle] = extern //207
  def IupZboxv(children: Ptr[Ptr[Ihandle]]): Ptr[Ihandle] = extern //208
  // def IupHbox(child: Ptr[Ihandle]): Ptr[Ihandle] = extern //209
  def IupHboxv(children: Ptr[Ptr[Ihandle]]): Ptr[Ihandle] = extern //210
  // def IupNormalizer(ih_first: Ptr[Ihandle]): Ptr[Ihandle] = extern //212
  def IupNormalizerv(ih_list: Ptr[Ptr[Ihandle]]): Ptr[Ihandle] = extern //213
  // def IupCbox(child: Ptr[Ihandle]): Ptr[Ihandle] = extern //215
  def IupCboxv(children: Ptr[Ptr[Ihandle]]): Ptr[Ihandle]                = extern //216
  def IupSbox(child: Ptr[Ihandle]): Ptr[Ihandle]                         = extern //217
  def IupSplit(child1: Ptr[Ihandle], child2: Ptr[Ihandle]): Ptr[Ihandle] = extern //218
  def IupScrollBox(child: Ptr[Ihandle]): Ptr[Ihandle]                    = extern //219
  def IupFlatScrollBox(child: Ptr[Ihandle]): Ptr[Ihandle]                = extern //220
  // def IupGridBox(child: Ptr[Ihandle]): Ptr[Ihandle] = extern //221
  def IupGridBoxv(children: Ptr[Ptr[Ihandle]]): Ptr[Ihandle] = extern //222
  // def IupMultiBox(child: Ptr[Ihandle]): Ptr[Ihandle] = extern //223
  def IupMultiBoxv(children: Ptr[Ptr[Ihandle]]): Ptr[Ihandle]                                      = extern //224
  def IupExpander(child: Ptr[Ihandle]): Ptr[Ihandle]                                               = extern //225
  def IupDetachBox(child: Ptr[Ihandle]): Ptr[Ihandle]                                              = extern //226
  def IupBackgroundBox(child: Ptr[Ihandle]): Ptr[Ihandle]                                          = extern //227
  def IupFrame(child: Ptr[Ihandle]): Ptr[Ihandle]                                                  = extern //229
  def IupFlatFrame(child: Ptr[Ihandle]): Ptr[Ihandle]                                              = extern //230
  def IupImage(width: CInt, height: CInt, pixels: Ptr[ /*const*/ CUnsignedChar]): Ptr[Ihandle]     = extern //232
  def IupImageRGB(width: CInt, height: CInt, pixels: Ptr[ /*const*/ CUnsignedChar]): Ptr[Ihandle]  = extern //233
  def IupImageRGBA(width: CInt, height: CInt, pixels: Ptr[ /*const*/ CUnsignedChar]): Ptr[Ihandle] = extern //234
  def IupItem(title: /*const*/ CString, action: /*const*/ CString): Ptr[Ihandle]                   = extern //236
  def IupSubmenu(title: /*const*/ CString, child: Ptr[Ihandle]): Ptr[Ihandle]                      = extern //237
  def IupSeparator: Ptr[Ihandle]                                                                   = extern //238
  // def IupMenu(child: Ptr[Ihandle]): Ptr[Ihandle] = extern //239
  def IupMenuv(children: Ptr[Ptr[Ihandle]]): Ptr[Ihandle]                          = extern //240
  def IupButton(title: /*const*/ CString, action: /*const*/ CString): Ptr[Ihandle] = extern //242
  def IupFlatButton(title: /*const*/ CString): Ptr[Ihandle]                        = extern //243
  def IupFlatToggle(title: /*const*/ CString): Ptr[Ihandle]                        = extern //244
  def IupDropButton(dropchild: Ptr[Ihandle]): Ptr[Ihandle]                         = extern //245
  def IupFlatLabel(title: /*const*/ CString): Ptr[Ihandle]                         = extern //246
  def IupFlatSeparator: Ptr[Ihandle]                                               = extern //247
  def IupCanvas(action: /*const*/ CString): Ptr[Ihandle]                           = extern //248
  def IupDialog(child: Ptr[Ihandle]): Ptr[Ihandle]                                 = extern //249
  def IupUser: Ptr[Ihandle]                                                        = extern //250
  def IupThread: Ptr[Ihandle]                                                      = extern //251
  def IupLabel(title: /*const*/ CString): Ptr[Ihandle]                             = extern //252
  def IupList(action: /*const*/ CString): Ptr[Ihandle]                             = extern //253
  def IupFlatList: Ptr[Ihandle]                                                    = extern //254
  def IupText(action: /*const*/ CString): Ptr[Ihandle]                             = extern //255
  def IupMultiLine(action: /*const*/ CString): Ptr[Ihandle]                        = extern //256
  def IupToggle(title: /*const*/ CString, action: /*const*/ CString): Ptr[Ihandle] = extern //257
  def IupTimer: Ptr[Ihandle]                                                       = extern //258
  def IupClipboard: Ptr[Ihandle]                                                   = extern //259
  def IupProgressBar: Ptr[Ihandle]                                                 = extern //260
  def IupVal(typ: /*const*/ CString): Ptr[Ihandle]                                 = extern //261
  def IupFlatVal(typ: /*const*/ CString): Ptr[Ihandle]                             = extern //262
  def IupFlatTree: Ptr[Ihandle]                                                    = extern //263
  // def IupTabs(child: Ptr[Ihandle]): Ptr[Ihandle] = extern //264
  def IupTabsv(children: Ptr[Ptr[Ihandle]]): Ptr[Ihandle] = extern //265
  // def IupFlatTabs(first: Ptr[Ihandle]): Ptr[Ihandle] = extern //266
  def IupFlatTabsv(children: Ptr[Ptr[Ihandle]]): Ptr[Ihandle]                 = extern //267
  def IupTree: Ptr[Ihandle]                                                   = extern //268
  def IupLink(url: /*const*/ CString, title: /*const*/ CString): Ptr[Ihandle] = extern //269
  def IupAnimatedLabel(animation: Ptr[Ihandle]): Ptr[Ihandle]                 = extern //270
  def IupDatePick: Ptr[Ihandle]                                               = extern //271
  def IupCalendar: Ptr[Ihandle]                                               = extern //272
  def IupColorbar: Ptr[Ihandle]                                               = extern //273
  def IupGauge: Ptr[Ihandle]                                                  = extern //274
  def IupDial(typ: /*const*/ CString): Ptr[Ihandle]                           = extern //275
  def IupColorBrowser: Ptr[Ihandle]                                           = extern //276
  def IupSpin: Ptr[Ihandle]                                                   = extern //279
  def IupSpinbox(child: Ptr[Ihandle]): Ptr[Ihandle]                           = extern //280
